--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai-http": "^3.0.0",
     "express": "^4.12.4",
-    "mongoose": "^4.7.1",
+    "mongoose": "^4.9.3",
     "morgan": "^1.7.0",
     "uuid": "^2.0.3"
   },
